--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -5,23 +5,8 @@ pipeline {
       //args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     //}
 agent {
-    kubernetes {
-        yaml """
-        apiVersion: v1
-        kind: Pod
-        spec:
-          - name: docker
-            image: docker:20.10
-            command:
-            - cat
-            tty: true
-          - name: maven
-            image: maven:3.9.4-eclipse-temurin-17
-            command:
-            - cat
-            tty: true
-        """
-    }
+    kubernetes{
+    label 'kubeagent'
 }
 
   
@@ -30,6 +15,7 @@ agent {
       steps {
         sh 'echo passed'
         git branch: 'main', url: 'https://github.com/mohan1607/Jenkins-Zero-To-Hero.git'
+        sh ' docker --version'
       }
     }
     stage('Build and Test') {
