--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,14 +1,9 @@
 pipeline {
-  //agent any
+  agent any
     //docker {
       //image 'abhishekf5/maven-abhishek-docker-agent:v1'
       //args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     //}
-agent {
-    kubernetes{
-    label 'kubeagent'
-}
-} 
   stages {
     stage('Checkout') {
       steps {
