--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -30,7 +30,7 @@ pipeline {
 stage('Run Docker') {
       steps {
         container('docker') {
-          sh 'docker -version'
+          sh 'docker run hello-world'
         }
       }
     }
