--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -64,3 +64,11 @@ pipeline {
     }
      }
   }
+post {
+      always {
+        container('docker') {
+          sh 'docker logout'
+      }
+      }
+    }
+}
