--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -46,6 +46,7 @@ pipeline {
     stage('Build-Docker-Image') {
       steps {
         container('docker') {
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app'
           sh 'docker build -t mohan1607/testing-image:latest .'
         }
       }
