--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -46,7 +46,7 @@ pipeline {
     stage('Build-Docker-Image') {
       steps {
         container('maven') {
-          sh 'docker build -t mohan1607/testing-image:latest -f java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile'
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t mohan1607/testing-image:latest .'
         }
       }
     }
