--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -45,7 +45,7 @@ pipeline {
     }
     stage('Build-Docker-Image') {
       steps {
-        container('maven') {
+        container('docker') {
           sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t mohan1607/testing-image:latest .'
         }
       }
