--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -53,7 +53,7 @@ pipeline {
     stage('Login-Into-Docker') {
       steps {
         container('docker') {
-          sh 'docker login -u mohan1607 -p Venky@1607'
+          sh 'docker login -u ${DOCKER_USER} -p ${DOCKER_PASSWD}'
       }
     }
     }
