--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -51,25 +51,46 @@ pipeline {
       }
     }
     stage('Login-Into-Docker') {
+      environment {
+        DOCKER_USER = Mohan1607
+      }
       steps {
+      withCredentials([string(credentialsId: 'docker', variable: 'DOCKER_PASSWD')]) {
         container('docker') {
           sh 'docker login -u ${DOCKER_USER} -p ${DOCKER_PASSWD}'
       }
     }
     }
+    }
      stage('Push-Images-Docker-to-DockerHub') {
+     environment {
+        DOCKER_IMAGE = "mohan1607/ultimate-cicd:${BUILD_NUMBER}"
+      }
       steps {
         container('docker') {
-          sh 'docker push mohan1607/testing-image:latest'
+          sh 'docker push ${DOCKER_IMAGE}'
       }
     }
      }
-  }
-post {
-      always {
-        container('docker') {
-          sh 'docker logout'
-      }
-      }
+    stage('Update Deployment File') {
+        environment {
+            GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
+            GIT_USER_NAME = "Mohan1607"
+        }
+        steps {
+            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                sh '''
+                    git config user.email "venkyravipati99@gmail.com"
+                    git config user.name "Mohan Venkatesh"
+                    BUILD_NUMBER=${BUILD_NUMBER}
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                '''
+            }
+        }
     }
+
+  }
 }
