--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -52,7 +52,7 @@ pipeline {
     }
     stage('Login-Into-Docker') {
       environment {
-        DOCKER_USER = Mohan1607
+        DOCKER_USER ="mohan1607"
       }
       steps {
       withCredentials([string(credentialsId: 'docker', variable: 'DOCKER_PASSWD')]) {
