--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -87,6 +87,10 @@ pipeline {
                     git config user.name "Mohan Venkatesh"
                     BUILD_NUMBER=${BUILD_NUMBER}
                     git status
+                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/
+                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    
                     //sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     //git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     //git commit -m "Update deployment image to version ${BUILD_NUMBER}"
