--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/
+Jenkins-Zero-To-Hero/java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/spring-boot-web.jar
+
