--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -86,6 +86,8 @@ pipeline {
                     git clone "https://github.com/Mohan1607/JavaApp-CD.git"
                     cd JavaApp-CD
                     ls -l
+                    cd spring-boot-app-manifests
+                    ls -l
                     git config user.email "venkyravipati99@gmail.com"
                     git config user.name "Mohan Venkatesh"
                     BUILD_NUMBER=${BUILD_NUMBER}
