--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -85,17 +85,14 @@ pipeline {
                 sh '''
                     git clone "https://github.com/Mohan1607/JavaApp-CD.git"
                     cd JavaApp-CD
-                    ls -l
-                    cd spring-boot-app-manifests
-                    ls -l
                     git config user.email "venkyravipati99@gmail.com"
                     git config user.name "Mohan Venkatesh"
                     BUILD_NUMBER=${BUILD_NUMBER}
                     ls -l
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" JavaApp-CD/spring-boot-app-manifests/deployment.yml
-                    #git add deployment.yml
-                    #git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    #git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yaml
+                    git add deployment.yml
+                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
             }
         }
