--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -90,7 +90,7 @@ pipeline {
                     BUILD_NUMBER=${BUILD_NUMBER}
                     ls -l
                     sed -i 's|tag: .*|tag: '${BUILD_NUMBER}'|' spring-boot-app/values.yaml
-                    sed -i s/tag: "[^"]*"/tag: '${BUILD_NUMBER}'/ spring-boot-app/values.yaml
+                    # sed -i s/tag: "[^"]*"/tag: '${BUILD_NUMBER}'/ spring-boot-app/values.yaml
                     echo "updated yaml file"
                     cat spring-boot-app/values.yaml 
                     git add spring-boot-app/values.yaml
